date collapsing to previous dates in chat issue resolved

--- a/src/app/components/friends/direct-chat/direct-chat.component.scss
+++ b/src/app/components/friends/direct-chat/direct-chat.component.scss
@@ -26,6 +26,7 @@
     gap: 10px;
     border-radius: 20px;
     background: #3e4246;
+    width: 100px;
   }
 
   .breakWord {
